--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" type="text/css" href="./lib/sweetalert.css" />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
+    
+ 
+  <!-- Preload a JavaScript file -->
+  <link rel="preload" href="sketch.js" as="script" />
+ 
 
 
   </head>
